[package]
name = "arc"
version = "0.1.0"
authors = ["Anicet Ebou <anicet.ebou@gmail.com>"]
edition = "2018"
exclude = ["tests/*", ".github/*", ".cargo/*"]
description = "arc is a fast archive converter"
homepage = "https://github.com/Ebedthan/arc"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["archive converter"] 

[dependencies]
anyhow        = "1.0.40"
chrono        = "0.4"
clap          = "~2.33"
exitcode      = "1.1.2"
fern          = "0.5"
log           = "0.4"
niffler       = "2.3.2"
rayon         = "1.5"
tempfile      = "3.2"
thiserror     = "1.0"

[dev-dependencies]
criterion     = "0.3"
tempfile      = "3"

[profile.release]
opt-level       = 3
debug           = true
overflow-checks = false
lto             = 'thin'
panic           = 'abort'
incremental     = false

[[bin]]
name = "arc"
path = "src/main.rs"
bench = false